@@ -3,13 +3,21 @@ package JAVA8.StreamAPI;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.function.Consumer;
+import java.util.function.Function;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class StreamMain1 {
     public static void main(String args[]){
         List<Integer> l=List.of(1,5,3,60,11,20,7);
-       // List l1= Arrays.asList(2,3,4,5);
+        Predicate<Integer> g=i->i%2==0;
+        System.out.print(g.test(4));
+        System.out.print(g.test(5));
+        //List<Integer> l=List.of(1,5,3,60,11,20,7);
+
+      //  List l1= Arrays.asList(2,3,4,5);
         //System.out.print(l1);
 
   /*      List<Integer> ev=new ArrayList<>();
@@ -24,6 +32,9 @@ public class StreamMain1 {
 
         //List l3=l.stream().filter(i->i%2==0).collect(Collectors.toList());
         List<Integer> greater= l.stream().filter(i->i>10).collect(Collectors.toList());
+
+      //  List<Integer> s=l.stream().filter(i->i>10).collect(Collectors.toList());
+
         Stream<Integer> s=l.stream();
         List<Integer> e=s.filter(i->i%2==0).collect(Collectors.toList());
         System.out.println(greater);
